# dj_drone

./: README.md  nuxt.config.ts
components/: VideoStream.vue
edge_server/: CMakeLists.txt  README.md
edge_server/examples/init/: app_info.h
edge_server/examples/liveview/: ffmpeg_stream_decoder.cc  ffmpeg_stream_decoder.h
edge_server/server/: CMakeLists.txt  main.cc
edge_server/server/include/server/: connection.h  edge_server.h  message_handler.h  tcp_server.h
edge_server/server/proto/: message.proto
edge_server/server/src/: main.cpp
edge_server/server/src/server/: CMakeLists.txt  connection.cpp  edge_server.cc  message_handler.cpp  tcp_server.cpp
pages/: video.vue
server/: .env_bak  README.md  data.db  i18n.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vue-i18n-extract.config.json
server/client/: error.vue
server/client/assets/css/: main.css
server/client/layouts/: admin.vue
server/client/middleware/: auth.ts
server/client/pages/: index.vue  login.vue
server/client/pages/admin/: dashboard.vue
server/client/plugins/: fetch.ts
server/common/decorators/: Entity.ts
server/common/types/: api.entity.ts  api.status.ts  base.entity.ts  user.entity.ts  user.ts
server/locales/: en.json  en.ts  zh.json  zh.ts
server/pages/: login.vue  video.vue
server/proto/: message.proto
server/server/: tsconfig.json
server/server/api/auth/: login.post.ts  logout.post.ts
server/server/decorators/: Entity.ts
server/server/models/: UserModel.ts
server/server/plugins/: bootstrap.ts
server/server/utils/: BaseModel.ts  bootstrap.ts  db.ts  dbhelper.ts  jwt.ts  logger.ts  modelManger.ts
server/socket/: index.ts
server/src/: app.vue
server/src/assets/css/: tailwind_output.css
server/src/layouts/: admin.vue
server/src/middleware/: auth.ts
server/src/pages/: login.vue
